@@ -198,7 +198,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.17</version>
                     <configuration>
-                        <argLine>-noverify</argLine>
+                        <argLine>-noverify -Xms512m -Xmx1024m -XX:MaxPermSize=256m</argLine>
                     </configuration>
                 </plugin>
             </plugins>
